Adding Q-matrix message and fixed bug with phantom robot movement where db move messages come in too quickly before we move them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
     FILES
     QLearningReward.msg
+    QMatrix.msg
+    QMatrixRow.msg
     RobotMoveDBToBlock.msg
 )
 
